--- a/docs/quotemachine.css
+++ b/docs/quotemachine.css
@@ -1,12 +1,17 @@
-*{ margin:0; padding:0; border:0;}
+*{ margin:0; padding:0; border:0; box-sizing:border-box;}
 body {
     background-color:rgb(167, 118, 118);
 }
 a {
     text-decoration:none;
 }
-#random-bgcolor {
-    transition : background-color 1s ease
+.random-bgcolor {
+    transition : background-color 1s ease-in-out;
+    background-color:peru;
+}
+.random-txtcolor{
+    transition: color 1s ease-in-out;
+    color:blue;
 }
 .content {
     max-width:400px;
@@ -44,7 +49,6 @@ span#author{
     font-size:1.5em;
 }
 .button, #button{
-    background-color:rgb(14, 39, 87);
     padding: 0.6em 0.6em;
     border-radius:2px;
     color:white;
