--- a/docs/quote/quotemachine.css
+++ b/docs/quote/quotemachine.css
@@ -1,11 +1,18 @@
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500');
 * {
     margin:0;
     padding:0;
     box-sizing: border-box;
 }
+
 body{
-    background-color: wheat
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    background-color: wheat;
+    transition: background-color 0.8 ease;
 }
+
 .box {
     background-color:white;
 }
