--- a/docs/quotemachine.css
+++ b/docs/quotemachine.css
@@ -5,7 +5,14 @@
     padding:0;
     box-sizing: border-box;
 }
-
+.btn {
+    border: 0;
+}
+.btn:focus,
+.btn:active{
+    outline: none;
+    box-shadow: none;
+  }
 body{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
