--- a/docs/calculator/calculator.css
+++ b/docs/calculator/calculator.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
+
+:root{
+    --warning: rgb(212, 224, 44);
+}
 *{
     margin:0; padding:0; box-sizing:border-box;
 }
@@ -51,16 +55,36 @@ body{
     background-color:rgb(70, 69, 117);
 
 }
+.back-color {
+    background-color: #111;
+}
 .output{
+    padding:0;
+    width:100%;
+    pointer-events: none;
     grid-area:input;
     text-align: right;
-    padding-right:5px;
-    padding-top:3px;
+    padding: 5px 5px;
+    
     font-family: 'Orbitron', sans-serif;
     font-size:0.8em;
+
 }
 .output input{
     text-align:right;
+    border:none;
+}
+.output-1{
+    background-color:rgb(255, 255, 255);
+    width:100%;
+    padding: 3px 0;
+    opacity: 0.6;
+    color:rgb(0, 0, 0);
+}
+.output-2{
+    background-color: #111;
+    font-size:1.5rem;
+    color: var(--warning)
 }
 .AC{
     background-color: rgb(80, 28, 28)
