--- a/docs/calculator/calculator.css
+++ b/docs/calculator/calculator.css
@@ -17,6 +17,7 @@ body{
     text-align:center;
 }
 .grid-container{
+    max-height:500px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 0.3fr 1fr 1fr 1fr 1fr 1fr 1fr;
