--- a/docs/overwhelmed_practice/caculator_practice/cal.css
+++ b/docs/overwhelmed_practice/caculator_practice/cal.css
@@ -48,7 +48,7 @@ input {
     text-align:right;
     border: 0;
     pointer-events: none;
-    color:white;
+    color:rgb(0, 0, 0);
 }
 input::placeholder{
     color:rgb(0, 0, 0);
@@ -57,15 +57,15 @@ input::placeholder{
     padding:0;
     grid-area:output;
 }
+.output input{
+    background-color:rgb(141, 141, 141);
+}
 .result{
-
     grid-area:result;
 }
 .result input{
     background-color:rgb(0, 0, 0);
     padding:5px 0;
-}
-.result> input::placeholder{
     color:white;
 }
 .ac{
