--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -11,8 +11,10 @@
     flex-wrap: wrap;
 } 
 .grid div{
-    border:1px solid rgba(255, 255, 255, 0.8);
+    /* border:1px solid rgba(255, 255, 255, 0.8); */
     width:20px;
     height:20px;
-    background-color:cyan;
+}
+.tetromino{
+    background-color:red;
 }
