--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -3,15 +3,33 @@
     margin:0;
     box-sizing:border-box;
 }
-.container{
+body{
+    background-color: rgb(250, 250, 250);
+}
+.entire-container{
     display:flex;
+    min-height:100vh;
+    align-items:center;
+}
+.big-container{
+    margin: auto auto;
+}
+.container{
+
+    display:flex;
+    justify-content:center;
+}
+.container-top{
+    margin-right:120px;
+    margin-bottom:20px;
 }
 .grid{
-    background-color:rgb(177, 177, 177);
+    background-color:rgba(177, 177, 177,0.2);
     width: 200px;
     height:400px;
     display:flex;
     flex-wrap: wrap;
+    
 } 
 .grid div{
     border:1px solid rgba(255, 255, 255, 0.8);
@@ -19,23 +37,22 @@
     height:20px;
 }
 .tetromino{
-    background-color:rgb(83, 11, 58);
+    background-color:rgb(102, 40, 153);
 }
 .mini-tetromino{
-    background-color:rgb(153, 134, 28)
+    background-color:rgb(192, 28, 28);
 }
 
 .show-tetromino{
     margin-left:30px;
-    
-    border:1px solid black;
-    width:  100px;
-    height: 82px;
+    width:  80px;
+    height: 80px;
     display:flex;
     flex-wrap:wrap;
+    outline:1px solid black;
 }
 .show-tetromino div{
     width:20px;
     height:20px;
-    border:1px solid white;
+    border:1px solid rgb(255, 255, 255);
 }
