--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -7,6 +7,7 @@ body{
     background-color: rgb(250, 250, 250);
 }
 .entire-container{
+    
     display:flex;
     min-height:100vh;
     align-items:center;
@@ -14,64 +15,92 @@ body{
 .big-container{
     margin: auto auto;
 }
-.container{
+.score-container{
+    padding-bottom:10px;
+}
+.tetris-container{
     display:flex;
     justify-content:center;
 }
-.container-top{
-    display:block;
-    margin-left:30px;
-    margin-bottom:20px;
-}
+
 .grid{
-    background-color:rgba(177, 177, 177,0.2);
+    margin-right:5px;
+    background-color:rgba(206, 206, 206, 0.2);
+    outline:1px solid rgb(240, 240, 240);
     width: 200px;
     height:400px;
     display:flex;
     flex-wrap: wrap;
-    
+    margin-right:5px;
+    border-radius:5px;
 } 
 .grid div{
-    border:1px solid rgba(255, 255, 255, 0.8);
+    border:1px solid rgba(255, 255, 255, 0.6);
     width:20px;
     height:20px;
 }
 .tetromino{
-    background-color:rgb(102, 40, 153);
+    background-color:rgb(189, 159, 28);
+    box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.4) inset;
+    border-radius:3px;
 }
 .mini-tetromino{
     background-color:rgb(192, 28, 28);
+    box-shadow: -2px 1px 2px 0 rgba(0, 0, 0, 0.4) inset;
+    border-radius:3px;
 }
 
 .right-column{
     background-color:white;
+    display:block;
+    border:1px solid rgb(165, 165, 165);
+    width:140px;
+    padding-top:10px;
+    margin-left:15px;
+    border-radius:5px;
+    background-color:blanchedalmond
 }
+.mini-container{
+    display:flex;
+    justify-content:center;
 
+}
 .show-tetromino{
-    margin-left:30px;
     width:  80px;
     height: 80px;
     display:flex;
     flex-wrap:wrap;
-    outline:1px solid black;
+    outline:double rgb(156, 149, 115);
+    margin-bottom:10px;
 }
 .show-tetromino div{
     width:20px;
     height:20px;
-    border:1px solid rgb(255, 255, 255);
 }
 
+/* control-key panel*/
 .control-btn{
-    margin-top:170px;
-
-    width:140px;
-    height:20px;
     text-align:center;
+    margin-top:10px;
+    height:118px;
 }
-
-.control-btn .left{
-    padding-right:1.1rem;
+.case-btn {
+    display:inline-block;
+    justify-content:center;
+    color:rgb(66, 66, 66);
+    font-size:2rem;
 }
-.control-btn .right{
-    padding-left:1.1rem;
+.btn-up{
+    height:33px;
+    width:100px;
+}
+.btn-horizontal{
+    height:33px;
+    width:100px;
+    display:flex;
+    justify-content:space-between;
+}
+.btn-down{
+    height:33px;
+    width:100px;
 }
