--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -10,7 +10,7 @@ body{
     display:flex;
     min-height:100vh;
     align-items:center;
-    background-color: rgb(214, 207, 192);
+    background: linear-gradient(225deg, #aa4b6b, #6b6b83, #3b8d99);
 }
 .big-container{
     margin: auto auto;
@@ -25,6 +25,12 @@ body{
 .score-container{
     padding-bottom:5px;
     margin-left:1.5rem;
+    font-family: 'DotGothic16', sans-serif;
+}
+.score-container span{
+    font-family: 'Alfa Slab One', cursive;
+    font-weight: 400;
+    color:rgba(255, 255, 255, 0.7);
 }
 .tetris-container{
     display:flex;
@@ -32,7 +38,6 @@ body{
 }
 .grid{
     margin-right:5px;
-    background-color:rgba(57, 31, 59, 0.2);
     width: 200px;
     height:400px;
     display:flex;
@@ -41,59 +46,87 @@ body{
     border-radius:5px;
 } 
 .grid div{
-    border:1px solid rgba(255, 255, 255, 0.3);
+    border:1px solid rgba(255, 255, 255, 0.1);
     width:20px;
     height:20px;
 }
-.empty{
+#empty{
     opacity:0
 }
 .tetromino{
     background-color:rgb(189, 159, 28);
-    box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.4) inset;
+    box-shadow:inset 0 0 1px 1px rgba(255, 255, 255, 0.8);
     border-radius:3px;
+    opacity:0.7;
 }
 
 .right-column{
     display:block;
-    border:1px solid rgba(165, 165, 165, 0.4);
+    background: linear-gradient(215deg,rgba(127, 127, 213, 0.3), rgba(134, 168, 231, 0.1), rgba(145, 234, 228, 0.5));
     width:140px;
     padding-top:10px;
     border-radius:5px;
-    background-color:blanchedalmond;
+    box-shadow:2px 1px 2px rgba(59, 39, 57, 0.3);
 }
+/* next tetromino display*/
 .mini-container{
     display:flex;
     justify-content:center;
+    opacity:0.7;
 }
 .mini-tetromino{
-    background-color:rgb(192, 28, 28);
-    box-shadow: -2px 1px 2px 0 rgba(0, 0, 0, 0.4) inset;
+    box-shadow:inset 0 0 1px 1px rgba(255, 255, 255, 0.8);
     border-radius:3px;
+}
+.crashed{
+    background-color:rgb(51, 51, 51);
 }
 .show-tetromino{
     width:  80px;
     height: 80px;
     display:flex;
     flex-wrap:wrap;
-    outline:double rgb(156, 149, 115);
-    margin-bottom:10px;
+    outline: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow:inset 1px 1px 1px 1px rgba(44, 33, 48, 0.8);
+    border-radius: 5px;
+    margin-bottom:50px;
 }
 .show-tetromino div{
     width:20px;
     height:20px;
 }
+/* pause button*/
+.btn-size{
+    margin-top:5px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.btn-size .btn{
+    height:30px;
+    width:84px;
+    border-radius:3px;
+    font-family: arial;
+    color:var(--bs-light);
+    opacity: 0.9;
+    font-weight:600;
+  
+    background-color:rgba(236, 220, 236, 0.05)
+}
 
+.btn:hover{
+    background-color: #844891;
+}
 /* control-key panel*/
 .control-btn{
     text-align:center;
-    margin-top:10px;
+    margin-top:50px;
     height:118px;
 }
 .case-btn {
     display:inline-block;
     justify-content:center;
-    color:rgb(66, 66, 66);
+    color:#483550;
     font-size:2rem;
 }
 .btn-up{
