--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -31,6 +31,7 @@ body{
     font-family: 'Alfa Slab One', cursive;
     font-weight: 400;
     color:rgba(255, 255, 255, 0.7);
+    /* color:rgba(255, 193, 24, 0.7) */
 }
 .tetris-container{
     display:flex;
