--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -22,17 +22,7 @@ body{
         transform: scale(1.7);
     }
 }
-.score-container{
-    padding-bottom:5px;
-    margin-left:1.5rem;
-    font-family: 'DotGothic16', sans-serif;
-}
-.score-container span{
-    font-family: 'Alfa Slab One', cursive;
-    font-weight: 400;
-    color:rgba(255, 255, 255, 0.7);
-    /* color:rgba(255, 193, 24, 0.7) */
-}
+
 .tetris-container{
     display:flex;
     justify-content:center;
@@ -55,7 +45,7 @@ body{
     opacity:0
 }
 .tetromino{
-    background-color:rgb(189, 159, 28);
+  
     box-shadow:inset 0 0 1px 1px rgba(255, 255, 255, 0.8);
     border-radius:3px;
     opacity:0.7;
@@ -90,11 +80,30 @@ body{
     outline: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow:inset 1px 1px 1px 1px rgba(44, 33, 48, 0.8);
     border-radius: 5px;
-    margin-bottom:50px;
+    margin-bottom:5px;
 }
 .show-tetromino div{
     width:20px;
     height:20px;
+}
+/* scores */
+.numbers{
+    height:50px;
+    font-family: 'Poppins', sans-serif;
+    font-size:12px;
+    padding-left:28px;
+}
+.numbers p{
+    margin:0
+}
+.level{
+    padding-left:15px;
+    color:rgba(255, 255, 255, 0.7);
+}
+.score-container-point{
+    padding-left:10px;
+    color:rgba(255, 255, 255, 0.7);
+    /* color:rgba(255, 193, 24, 0.7) */
 }
 /* pause button*/
 .btn-size{
@@ -120,7 +129,7 @@ body{
 /* control-key panel*/
 .control-btn{
     text-align:center;
-    margin-top:50px;
+
     height:118px;
 }
 .case-btn {
