--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -92,6 +92,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size:12px;
     padding-left:28px;
+    color:rgba(213, 213, 127, 1)
 }
 .numbers p{
     margin:0
@@ -101,7 +102,7 @@ body{
     color:rgba(255, 255, 255, 0.7);
 }
 .score-container-point{
-    padding-left:10px;
+    padding-left:11.5px;
     color:rgba(255, 255, 255, 0.7);
     /* color:rgba(255, 193, 24, 0.7) */
 }
@@ -129,7 +130,7 @@ body{
 /* control-key panel*/
 .control-btn{
     text-align:center;
-
+    margin-top:30px;
     height:118px;
 }
 .case-btn {
