--- a/docs/JScalculator/calculator.css
+++ b/docs/JScalculator/calculator.css
@@ -46,15 +46,17 @@ body{
 }
 .container-output :nth-child(1){
     font-size:1.3rem;
+    height:40px;
 }
 .container-output :nth-child(2){
     font-size:35px;
+    height:80px;
 }
 
 .type-part{
     padding:10px 20px;
 }
-.symbols, .number{
+.symbols, .number, .operator{
     font-size:1.3rem;
     width:50px;
     height:50px;
