--- a/docs/Tetris/tetris.css
+++ b/docs/Tetris/tetris.css
@@ -6,6 +6,16 @@
 body{
     background-color: rgb(0, 0, 0);
 }
+.info{
+    position:absolute;
+    bottom:3rem;
+    margin:0 auto;
+    text-align: center;
+    width:100%;
+    color:rgb(37, 30, 39);
+    font-size:1.4rem;
+    font-weight:600;
+}
 .entire-container{
     display:flex;
     min-height:100vh;
